refactor: robustece Biblioteca com validações, período String e uso de valorMulta()
- Ajusta cadastro de Aluno/AlunoBolsista para período como String (Manhã/Tarde/Noite)
- Adiciona checagens de nulos e quantidades em acervo
- Evita emprestar quando livro não é encontrado
- Usa Emprestimo.valorMulta() na listagem de atrasados
- Padroniza trims e mensagens; previne índice inválido na devolução
- Mantém orquestração do fluxo sem conhecer tipos concretos de Usuario