@@ -1,140 +1,145 @@
 package team4.biblioteca;
+
 import team4.usuario.*;
+
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Biblioteca {
-    private Map<Livro, Integer> acervo = new HashMap<>();
-    private Map<Integer, Usuario> usuarios = new HashMap<>();
-    private List<Emprestimo> emprestimos = new ArrayList<>();
+    private final Map<Livro, Integer> acervo = new HashMap<>();
+    private final Map<Integer, Usuario> usuarios = new HashMap<>();
+    private final List<Emprestimo> emprestimos = new ArrayList<>();
 
+    // --- ACERVO ---
 
-    // Cadastrar livro
     public void cadastrarLivro(Scanner scanner) {
         System.out.print("Título: ");
-        String titulo = scanner.nextLine();
-
+        String titulo = scanner.nextLine().trim();
         System.out.print("Autor: ");
-        String autor = scanner.nextLine();
-
+        String autor = scanner.nextLine().trim();
         System.out.print("Editora: ");
-        String editora = scanner.nextLine();
+        String editora = scanner.nextLine().trim();
 
         System.out.print("Ano de publicação: ");
         int ano = scanner.nextInt();
 
-        Livro livro = new Livro(titulo, autor, editora, ano);
+        Livro livro;
+        try {
+            livro = new Livro(titulo, autor, editora, ano);
+        } catch (IllegalArgumentException e) {
+            System.out.println("Erro ao cadastrar livro: " + e.getMessage());
+            return;
+        }
 
         System.out.print("Quantidade total: ");
         int quantidade = scanner.nextInt();
-        if (adicionarAcervo(livro, quantidade))
-            System.out.println(quantidade + " exemplar(es) de '" + livro.getTitulo() + "' "
-                + "adicionado(s) com sucesso.");
+        if (adicionarAcervo(livro, quantidade)) {
+            System.out.println(quantidade + " exemplar(es) de '" + livro.getTitulo() + "' adicionado(s) com sucesso.");
+        }
     }
 
-    // Pesquisar no acervo livro por titulo
     public Livro pesquisarLivroPorTitulo(String titulo) {
-        for (Livro livro : this.acervo.keySet()) {
-            if (livro.getTitulo().equalsIgnoreCase(titulo)) {
-                return livro; // Retorna o objeto Livro assim que o encontra
+        if (titulo == null || titulo.trim().isEmpty()) return null;
+        for (Livro livro : acervo.keySet()) {
+            if (livro.getTitulo().equalsIgnoreCase(titulo.trim())) {
+                return livro;
             }
         }
-        return null; // Retorna null se nenhum livro for encontrado
+        return null;
     }
 
-    //Adicionar livro no acervo
     public boolean adicionarAcervo(Livro livro, int quantidade) {
-        if (quantidade > 0) {
-            this.acervo.put(livro, this.acervo.getOrDefault(livro, 0) + quantidade);
-            System.out.println(quantidade + " exemplar(es) de '" + livro.getTitulo() + "' "
-                + "adicionado(s) com sucesso.");
-            return true;
-        } else {
+        if (livro == null) {
+            System.out.println("Livro inválido.");
+            return false;
+        }
+        if (quantidade <= 0) {
             System.out.println("A quantidade deve ser maior que zero.");
             return false;
         }
+        acervo.put(livro, acervo.getOrDefault(livro, 0) + quantidade);
+        return true;
     }
 
-    //Remover livro do acervo
     public boolean removerLivro(Livro livro, int quantidade) {
-        if (this.acervo.containsKey(livro)) {
-            int quantidadeAtual = this.acervo.getOrDefault(livro, 0)
-                    ;
-            if (quantidadeAtual > quantidade) {
-                this.acervo.put(livro, quantidadeAtual - quantidade);
-                System.out.println(quantidade + " exemplar(es) de '" + livro.getTitulo() + "' "
-                    + "removido(s).");
-                return true;
-            } else if (quantidadeAtual == quantidade) {
-                this.acervo.remove(livro);
-                System.out.println("Todos os exemplares de '" + livro.getTitulo() + "' "
-                    + "foram removidos.");
-                return true;
-            } else {
-                System.out.println("Não há exemplares suficientes de '" + livro.getTitulo() + "'. "
-                    + "Apenas " + quantidadeAtual + " em estoque.");
-                return false;
-            }
-        } else {
+        if (livro == null) {
+            System.out.println("Livro não encontrado.");
+            return false;
+        }
+        if (quantidade <= 0) {
+            System.out.println("Quantidade deve ser maior que zero.");
+            return false;
+        }
+        Integer atual = acervo.get(livro);
+        if (atual == null) {
             System.out.println("O livro '" + livro.getTitulo() + "' não foi encontrado no acervo.");
+            return false;
+        }
+        if (atual > quantidade) {
+            acervo.put(livro, atual - quantidade);
+            System.out.println(quantidade + " exemplar(es) de '" + livro.getTitulo() + "' removido(s).");
+            return true;
+        } else if (atual == quantidade) {
+            acervo.remove(livro);
+            System.out.println("Todos os exemplares de '" + livro.getTitulo() + "' foram removidos.");
+            return true;
+        } else {
+            System.out.println("Não há exemplares suficientes de '" + livro.getTitulo() + "'. Apenas " + atual + " em estoque.");
             return false;
         }
     }
 
-    // Listar todos os livros disponívrid no acervo
     public void listarAcervo() {
-        if (this.acervo.isEmpty()) {
+        if (acervo.isEmpty()) {
             System.out.println("A biblioteca está vazia.");
-        } else {
-            System.out.println("Acervo da Biblioteca:");
-            for (Map.Entry<Livro, Integer> entry : this.acervo.entrySet()) {
-                System.out.println("  " + entry.getKey().getTitulo() + " - Quantidade: "
-                    + entry.getValue());
-            }
+            return;
+        }
+        System.out.println("Acervo da Biblioteca:");
+        for (Map.Entry<Livro, Integer> e : acervo.entrySet()) {
+            System.out.println("  " + e.getKey().getTitulo() + " - Quantidade: " + e.getValue());
         }
     }
 
-    // Cadastrar usuários de diferentes tipos
+    // --- USUÁRIOS ---
+
     public void cadastrarUsuario(Scanner scanner) {
-        System.out.println("Informe o tipo de usuário (1- Aluno, 2- Aluno Bolsista, 3- Professor, "
-            + "4- Professor Estagiário): ");
+        System.out.println("Informe o tipo de usuário (1- Aluno, 2- Aluno Bolsista, 3- Professor, 4- Professor Estagiário): ");
         int tipo = scanner.nextInt();
-        scanner.nextLine();
+        scanner.nextLine(); // consumir quebra
 
         System.out.print("Nome: ");
-        String nome = scanner.nextLine();
-
+        String nome = scanner.nextLine().trim();
         System.out.print("Email: ");
-        String email = scanner.nextLine();
-
+        String email = scanner.nextLine().trim();
         System.out.print("Telefone: ");
-        String telefone = scanner.nextLine();
+        String telefone = scanner.nextLine().trim();
 
         try {
             Usuario usuario = null;
             switch (tipo) {
                 case 1 -> {
                     System.out.print("Curso: ");
-                    String curso = scanner.nextLine();
-                    System.out.print("Período: ");
-                    int periodo = scanner.nextInt();
+                    String curso = scanner.nextLine().trim();
+                    System.out.print("Período (Manhã/Tarde/Noite): ");
+                    String periodo = scanner.nextLine().trim();
                     usuario = new Aluno(nome, email, telefone, curso, periodo);
                 }
                 case 2 -> {
                     System.out.print("Curso: ");
-                    String curso = scanner.nextLine();
-                    System.out.print("Período: ");
-                    int periodo = scanner.nextInt();
+                    String curso = scanner.nextLine().trim();
+                    System.out.print("Período (Manhã/Tarde/Noite): ");
+                    String periodo = scanner.nextLine().trim();
                     usuario = new AlunoBolsista(nome, email, telefone, curso, periodo);
                 }
                 case 3 -> {
                     System.out.print("Departamento: ");
-                    String departamento = scanner.nextLine();
+                    String departamento = scanner.nextLine().trim();
                     usuario = new Professor(nome, email, telefone, departamento);
                 }
                 case 4 -> {
                     System.out.print("Departamento: ");
-                    String departamento = scanner.nextLine();
+                    String departamento = scanner.nextLine().trim();
                     usuario = new ProfessorEstagiario(nome, email, telefone, departamento);
                 }
                 default -> {
@@ -142,86 +147,83 @@ public class Biblioteca {
                     return;
                 }
             }
-
+            if (usuarios.containsKey(usuario.getId())) {
+                System.out.println("Já existe usuário com esse ID.");
+                return;
+            }
             adicionarUsuario(usuario.getId(), usuario);
-
+            System.out.println("Usuário cadastrado: " + usuario.getNome() + " (id=" + usuario.getId() + ")");
         } catch (IllegalArgumentException e) {
             System.out.println("Erro ao cadastrar usuário: " + e.getMessage());
         }
     }
 
     public void adicionarUsuario(int idUsuario, Usuario usuario) {
-        this.usuarios.put(idUsuario, usuario);
+        usuarios.put(idUsuario, usuario);
     }
 
-    // Listar todos os usuários
     public void listarUsuarios() {
-        if (this.usuarios.isEmpty()) {
+        if (usuarios.isEmpty()) {
             System.out.println("Nenhum usuário cadastrado.");
             return;
         }
-
-        for (Usuario u : this.usuarios.values()) {
+        for (Usuario u : usuarios.values()) {
             System.out.println("ID: " + u.getId());
             System.out.println("Nome: " + u.getNome());
             System.out.println("Email: " + u.getEmail());
 
             if (u instanceof Aluno aluno) {
-                System.out.println("Tipo: " + (aluno instanceof AlunoBolsista ? "Aluno Bolsista"
-                    : "Aluno"));
+                System.out.println("Tipo: " + (aluno instanceof AlunoBolsista ? "Aluno Bolsista" : "Aluno"));
                 System.out.println("Curso: " + aluno.getCurso());
                 System.out.println("Período: " + aluno.getPeriodo());
             } else if (u instanceof Professor professor) {
-                System.out.println("Tipo: " + (professor instanceof ProfessorEstagiario ? "Professor "
-                    + "Estagiário" : "Professor"));
+                System.out.println("Tipo: " + (professor instanceof ProfessorEstagiario ? "Professor Estagiário" : "Professor"));
                 System.out.println("Departamento: " + professor.getDepartamento());
             } else {
                 System.out.println("Tipo: Usuário desconhecido.");
             }
-
             System.out.println("--------------------------------");
         }
     }
 
-    // Editar dados do usuário
     public void editarUsuario(Scanner scanner) {
         System.out.print("Informe o ID do usuário a editar: ");
         int id = scanner.nextInt();
         scanner.nextLine();
 
-        Usuario usuario = this.usuarios.get(id);
+        Usuario usuario = usuarios.get(id);
         if (usuario == null) {
             System.out.println("Usuário não encontrado.");
             return;
         }
-
         System.out.print("Novo email: ");
-        String novoEmail = scanner.nextLine();
-        if (usuario.alterarEmail(novoEmail)) {
+        String novoEmail = scanner.nextLine().trim();
+        try {
+            usuario.alterarEmail(novoEmail);
             System.out.println("Email atualizado com sucesso.");
-        } else {
-            System.out.println("Email inválido.");
+        } catch (IllegalArgumentException e) {
+            System.out.println("Email inválido: " + e.getMessage());
         }
     }
 
-    // Remover usuário
     public void removerUsuario(Scanner scanner) {
         System.out.print("Informe o ID do usuário a remover: ");
         int id = scanner.nextInt();
-        if (this.usuarios.remove(id) != null) {
+        if (usuarios.remove(id) != null) {
             System.out.println("Usuário removido com sucesso.");
         } else {
             System.out.println("Usuário não encontrado.");
         }
     }
 
-    // Realizar empréstimo
+    // --- EMPRÉSTIMOS ---
+
     public void realizarEmprestimo(Scanner scanner) {
         listarUsuarios();
         System.out.print("Informe o ID do usuário: ");
         int idUsuario = scanner.nextInt();
         scanner.nextLine();
-        Usuario usuario = this.usuarios.get(idUsuario);
+        Usuario usuario = usuarios.get(idUsuario);
 
         if (usuario == null || !usuario.podePegarEmprestimo()) {
             System.out.println("Usuário inválido ou não pode pegar empréstimo.");
@@ -231,70 +233,71 @@ public class Biblioteca {
         listarAcervo();
         System.out.print("Informe o título do livro: ");
         String titulo = scanner.nextLine();
-
         Livro livro = pesquisarLivroPorTitulo(titulo);
-
-        if (!removerLivro(livro, 1)) {
+        if (livro == null) {
+            System.out.println("Livro não encontrado.");
             return;
         }
+        if (!removerLivro(livro, 1)) return;
 
         LocalDate hoje = LocalDate.now();
-        Emprestimo emprestimo = new Emprestimo(usuario, livro, hoje, usuario.getDiasEmprestimo());
-        this.emprestimos.add(emprestimo);
+        Emprestimo emp = new Emprestimo(usuario, livro, hoje, usuario.getDiasEmprestimo());
+        emprestimos.add(emp);
         System.out.println("Empréstimo registrado com sucesso.");
     }
 
-    // Listar todos os empréstimos ativos
     public void listarEmprestimosAtivos() {
-        this.emprestimos.stream()
-                .filter(e -> !e.isDevolvido())
-                .forEach(System.out::println);
+        emprestimos.stream()
+            .filter(e -> !e.isDevolvido())
+            .forEach(System.out::println);
     }
 
-    // Listar empréstimos atrasados
     public void listarEmprestimosAtrasados() {
-        this.emprestimos.stream()
-                .filter(Emprestimo::isAtrasado)
-                .forEach(e -> {
-                    System.out.println(e);
-                    System.out.println("Dias de atraso: " + e.diasDeAtraso());
-                    System.out.println("Multa: R$ " + e.getUsuario().calcularMulta(e.diasDeAtraso()));
-                });
+        emprestimos.stream()
+            .filter(Emprestimo::isAtrasado)
+            .forEach(e -> {
+                System.out.println(e);
+                System.out.println("Dias de atraso: " + e.diasDeAtraso());
+                System.out.println("Multa: R$ " + e.valorMulta());
+            });
     }
 
-    // Registrar devolução
     public void registrarDevolucao(Scanner scanner) {
         listarUsuarios();
         System.out.print("Informe o ID do usuário: ");
         int id = scanner.nextInt();
         scanner.nextLine();
 
-        List<Emprestimo> emprestimosUsuario = this.emprestimos.stream()
-                .filter(e -> e.getUsuario().getId() == id && !e.isDevolvido())
-                .toList();
+        List<Emprestimo> ativosDoUsuario = emprestimos.stream()
+            .filter(e -> e.getUsuario().getId() == id && !e.isDevolvido())
+            .collect(Collectors.toList());
 
-        if (emprestimosUsuario.isEmpty()) {
+        if (ativosDoUsuario.isEmpty()) {
             System.out.println("Nenhum empréstimo ativo encontrado.");
             return;
         }
 
-        for (int i = 0; i < emprestimosUsuario.size(); i++) {
-            System.out.println(i + ". " + emprestimosUsuario.get(i));
+        for (int i = 0; i < ativosDoUsuario.size(); i++) {
+            System.out.println(i + ". " + ativosDoUsuario.get(i));
         }
 
         System.out.print("Escolha o número do empréstimo a devolver: ");
         int index = scanner.nextInt();
-        if (index < 0 || index >= emprestimosUsuario.size()) {
+        if (index < 0 || index >= ativosDoUsuario.size()) {
             System.out.println("Opção inválida.");
             return;
         }
 
-        Emprestimo emprestimo = emprestimosUsuario.get(index);
-        if (adicionarAcervo(emprestimo.getLivro(), 1)) {
-            emprestimo.registrarDevolucao(LocalDate.now());
-            System.out.println("Devolução registrada com sucesso.");
+        Emprestimo emp = ativosDoUsuario.get(index);
+        if (adicionarAcervo(emp.getLivro(), 1)) {
+            try {
+                emp.registrarDevolucao(LocalDate.now());
+                System.out.println("Devolução registrada com sucesso.");
+            } catch (IllegalStateException | IllegalArgumentException ex) {
+                System.out.println("Erro ao registrar devolução: " + ex.getMessage());
+            }
         } else {
-            System.out.println("Livro não pertence ao acervo.");
+            System.out.println("Falha ao devolver: livro não pertence ao acervo.");
         }
     }
 }
